# SuperMarketBot-IOT

./: .gitignore  BleUi.h  Config.h  CtrlJson.h  MotorLayout.h  Motors.h  Odometry.h  README.md  RobotTelemetry.h  SensorLayout.h  Sensors.h  StatusRGB.h  SuperMarketBot-IOT.ino  WebUI.h
.cursor/rules/: 20-phases-roadmap.mdc
Android-Native Hub/: IMPLEMENTATION_GUIDE.md  QUICKSTART.md  README.md  ROADMAP.md  settings.gradle
Android-Native Hub/app/: build.gradle
Android-Native Hub/app/src/main/cpp/: CMakeLists.txt
Android-Native Hub/app/src/main/cpp/include/: AStarPlanner.h  PurePursuit.h  RobotMotorCommand.h  SLAMEngine.h  udp_socket.h
Android-Native Hub/app/src/main/cpp/src/: jni_wrapper.cpp
Android-Native Hub/app/src/main/cpp/src/utils/: udp_socket.cpp
ESP32-CAM/: .gitignore  BackendUpload.h  CamDriver.h  Config.example.h  Config.h  ESP32-CAM.ino  HttpCamServer.h  README-DEMO.md  README.md  WebUI.h  WifiSta.h
ESP32-S3/: Config.h  LICENSE  README.md  SensorLayout.h  SuperMarketBot-IOT.ino  WebUI.h
ESP32-S3/MotorOnly/: MotorOnly.ino
ESP32-S3/SuperMarketBot-IOT/: Config.h  CtrlJson.h  ImuMpu6050.h  LidarStreamWS.h  LineDecoder.h  LineSensor.h  LocalObstacleAvoid.h  Localization.h  LogStream.h  MOTOR_IMPROVEMENT_GUIDE.md  MotorControlPro.h  MotorLayout.h  MotorTrim.h  Motors.h  Motors.h.bak  MqttClient.h  ObstacleSensors.h  Odometry.h  PidController.h  PidController.h.bak  PidControllerPro.h  RobotTelemetry.h  SensorLayout.h  Sensors.h  SslCert.h  StatusRGB.h  SuperMarketBot-IOT.ino  VisionHttps.h  VisionTablet.h  WaypointNav.h  (+4 more)
tools/: ble-dashboard.html
(+30 files in other folders)
